# cryptic-grpc

./: Cargo.toml
.github/workflows/: ci.yaml
cryptic-grpc-rust/: Cargo.toml  build.rs
cryptic-grpc-rust/src/: lib.rs
proto/: auth.proto
